code improvement : bug solved - 1.Refresh sidebar selected shown, 2.restore code refacter, 3.updated same node twise, 4.modal black screen stuck on delete node

--- a/client/src/app/modules/dashboard-v2/components/dashboard-v2-sidebar/dashboard-sidebar.component.scss
+++ b/client/src/app/modules/dashboard-v2/components/dashboard-v2-sidebar/dashboard-sidebar.component.scss
@@ -107,12 +107,12 @@
 
 .rotate {
     transform: rotate(90deg);
-    transition: .8s;
+    // transition: .8s;
 }
 
 .no-rotate {
     transform: rotate(0deg);
-    transition: .8s;
+    // transition: .8s;
 }
 
 .click-pink {
@@ -125,6 +125,16 @@
 
 .show {
     display: block;
+}
+
+.show-drop {
+    -webkit-transition: all linear 0.5s;
+    transition: all linear 0.5s;
+    display: block;
+}
+
+.hide-drop {
+    display: none;
 }
 
 .ui.teal.left.pointing.label {
